--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,16 @@
 version: 2
 jobs:
   build:
-    macos:
-      xcode: "9.3.0"
+    docker:
+      - image: debian:stretch
     steps:
       - checkout
       - run:
           name: Greeting
           command: echo Hello, world.
       - run:
-          name: Xcode
-          command: which xcodebuild
+          name: checking for npm
+          command: which npm
       - run:
           name: npm
           command: npm install
