--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/android:api-28-ndk-r17b-node-browsers-legacy
+      - image: circleci/android:api-28-ndk-r17b-node
     steps:
       - checkout
       - run:
