--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,35 @@
-version: 2
-jobs:
-  build:
-    docker:
-      - image: circleci/android:api-28-node8-alpha
-    steps:
-      - checkout
-      - run:
-          name: Greeting
-          command: echo Hello, world.
-      - run:
-          name: checking for npm
-          command: npm -v
-      - run:
-          name: installing ionic
-          command: npm install ionic && npm install cordova && npm install && ionic cordova platform add android
+version: 3
+## Setup machine
+machine:
+  java:
+    version: 'oraclejdk8'
+  node:
+    version: v6.10.3
+  ruby:
+    version: 2.1.2
+  environment:
+    ANDROID_HOME: /usr/local/android-sdk-linux
+
+
+## Setup dependencies
+dependencies:
+  pre:
+    - npm install -g ionic cordova
+    - echo y | android update sdk --no-ui --all --filter tools,platform-tools,extra-google-m2repository,extra-google-google_play_services,extra-android-support,extra-android-m2repository,android-25
+    - echo y | android update sdk --no-ui --all --filter build-tools-25.0.0
+
+  cache_directories:
+    - /usr/local/android-sdk-linux/tools
+    - /usr/local/android-sdk-linux/build-tools/24.0.1
+
+  post:
+    - mkdir www
+    - ionic cordova platform add android -Y --noresources
+
+test:
+  pre:
+    - npm install
+
+  override:
+    - ionic cordova build android -Y
+    - cp -r platforms/android/build/outputs/apk $CIRCLE_ARTIFACTS
