--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,3 +33,15 @@ test:
   override:
     - ionic cordova build android -Y
     - cp -r platforms/android/build/outputs/apk $CIRCLE_ARTIFACTS
+jobs:
+  build:
+    docker:
+      - image: debian:stretch
+    steps:
+      - checkout
+      - run:
+          name: Greeting
+          command: echo Hello, world.
+      - run:
+          name: Print the Current Time
+          command: date
