--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,8 +40,11 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Greeting
-          command: echo Hello, world.
+          name: platform add
+          command: ionic cordova platform add android -Y --noresources
       - run:
-          name: Print the Current Time
-          command: date
+          name: npm install
+          command: npm install
+      - run:
+          name: build android
+          command: ionic cordova build android -Y
